2010-02-02  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Should not select a word on right-click.
        https://bugs.webkit.org/show_bug.cgi?id=33364

        For non-Mac platforms, do not select a word around the caret when
        a context menu is opening. This behavior is not common in non-Mac
        platforms, and it prevents pasting with a context menu.

        In order that the spell checker works without the selection, we
        introduce WebFrame::selectWordAroundCaret(). We can replace a word
        around the caret with selectWordAroundCaret() + replaceSelection().

        * public/WebFrame.h: Add pure selectWordAroundCaret() declaration.
        * src/ContextMenuClientImpl.cpp:
        (WebKit::selectMisspelledWord): Move word-selection code to
        WebFrameImpl::selectWordAroundPosition(), and clear the selection
        on non-Mac.
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::selectWordAroundPosition):
        (WebKit::WebFrameImpl::selectWordAroundCaret):
        * src/WebFrameImpl.h: Add selectWordAroundCaret() declaration.

2010-02-01  Shinichiro Hamaji  <hamaji@chromium.org>

        Unreviewed attempt to fix the broken build.

        This was introduced in http://trac.webkit.org/changeset/54182

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::performMediaPlayerAction):

2010-01-27  Matt Perry  <mpcomplete@chromium.org>

        Reviewed by Eric Seidel.

        Add support for addUserScript to chromium port.

        * public/WebView.h:
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::addUserScript):
        (WebKit::WebViewImpl::removeAllUserContent):
        * src/WebViewImpl.h:

2010-01-29  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Carlson.

        [GTK] set playbin mute property depending on volume value
        https://bugs.webkit.org/show_bug.cgi?id=31586

        New API in MediaPlayer for mute control
