@@ -55,7 +55,9 @@ public:
         return *this;
     }
 
+    // FIXME: This should return a WebSecurityOrigin, not a pointer to one.
     WEBKIT_API static WebSecurityOrigin* createFromDatabaseIdentifier(const WebString& databaseIdentifier);
+    WEBKIT_API static WebSecurityOrigin createFromString(const WebString&);
 
     WEBKIT_API void reset();
     WEBKIT_API void assign(const WebSecurityOrigin&);
