@@ -1,3 +1,14 @@
+2010-02-01  Jeremy Orlow  <jorlow@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        [Chromium] Add WebSecurityOrigin::createFromString factory
+        https://bugs.webkit.org/show_bug.cgi?id=34460
+
+        * public/WebSecurityOrigin.h:
+        * src/WebSecurityOrigin.cpp:
+        (WebKit::WebSecurityOrigin::createFromString):
+
 2010-02-02  Kent Tamura  <tkent@chromium.org>
 
         Reviewed by Darin Fisher.
